[tool.poetry]
name = "drudgeyer"
version = "0.1.0"
description = ""
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokusumi/drudgeyer"

include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.2"
isort = "^5.7.0"
pytest-cov = "^2.11.1"
autoflake = "^1.4"
pytest-asyncio = "^0.14.0"
pytest-timeout = "^1.4.2"
requests = "^2.25.1"

[tool.poetry.scripts]
drudgeyer = "drudgeyer.__init__:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
